--- a/getting-started.html
+++ b/getting-started.html
@@ -7,7 +7,7 @@
 	
 
 	<!-- script -->
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
