--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 	<title>Index Page</title>
 </head>
 <body>
-	<!--
-		more HTML will go here...
-	-->
-
+	
 	<!-- script -->
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+<!--
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+-->
+<!--
+	<script
+  src="https://code.jquery.com/jquery-1.12.4.min.js"
+  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  crossorigin="anonymous"></script>
+-->
 </body>
 </html>
